      an item is selected.
    - Woopsi class does not attempt to retrieve system font before it is
      initialised.
    - ListBox canvas height no longer includes extra pixel.
    - ListBox raises an action event when double-clicked.
    - ListBox ignores double-clicks that occur across multiple items.
    - Removed unused Gadget::_doubleClickTime member.
  
  
  - New Features:
    - Split ListData class into ListData and ListDataItem classes for greater
      flexibility.
    - Minor improvements to the ListBox's use of the ListData class.
    - Altered ListData::quickSort() and added compareTo() method to ListDataItem
      to allow custom ordering of ListDataItem subclasses.
    - ScrollingBase adds support for specifying planes on which scrolling can
      occur.
    - ScrollingPanel implements ScrollingBase's allow/disallow scroll plane
      features to prevent scrolling on certain planes.
    - ListBox does not allow horizontal scrolling.


  V0.41 (20091124)
  
  - Fixes:
    - Removed Gadget::unregisterChildrenFromVBL() declaration from gadget.h as
      the function does not exist.
    - Graphics::dim() draws to correct dimensions.
    - GraphicsPort::dim() clips properly.
    - BitmapButton::getPreferredDimensions() returns the correct size.
    - AnimButton::getPreferredDimensions() returns the correct size.
    - Anim button animation continues playing correctly when clicked if
      disabled.
    - ListBox::getPreferredDimensions() returns the correct size.
    - ListBox::draw() clips more effectively.
    - Removed getEditableData() bodge from bitmap classes; all interaction with
      bitmap data happens through bitmap methods.
    - Moved IK bitmaps out of demo folder/NDS into animbutton test.
    - ScrollingListBox::getPreferredDimensions() returns the correct size.
    - SliderHorizontal and SliderVertical produce correct values when they are
      showing a range of values large enough for the grip to be artificially
      enlarged.